--- a/P001659.opf/meta.yml
+++ b/P001659.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P001659
+id: P001659
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W20462
   title: བོད་ལྗོངས་ཡུལ་སྐོར་སྣེ་ཤན
-  volume: ''
   author: ''
+  volumes: {}
