--- a/P001659.opf/layers/v001/Pagination.yml
+++ b/P001659.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: eead3786e64c4283af927cf828d6d9cd
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   6f9cf5af30314a28bed408648327e1f0:
