--- a/P001659.opf/meta.yml
+++ b/P001659.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P001659
 initial_creation_type: ocr
 created_at: 21/03/2020
-last_modified_at: 24/11/2021
+last_modified_at: 2021-12-17 10:13:02.244386
 source_metadata:
   id: bdr:W20462
   title: བོད་ལྗོངས་ཡུལ་སྐོར་སྣེ་ཤན
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 266
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessFairUse
+  restrictedInChina: true
